[FIX][REFACTOR] Fix launchwrapper in forge 1.7.10